--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.3",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
     "uuid": "^8.3.2"
@@ -19,5 +19,13 @@
     "gh-pages": "^3.1.0",
     "nodemon": "^2.0.6"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ponniah96/heroapp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Ponniah96/heroapp/issues"
+  },
+  "homepage": "https://github.com/Ponniah96/heroapp#readme",
   "description": ""
 }
