--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "zoom-clone",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "type": "module"
   },
   "keywords": [],
   "author": "",
