--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.3",
+    "@google-cloud/storage": "^5.7.4",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "socket.io": "^2.3.0",
+    "socket.io": "^2.4.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.7"
   },
   "description": ""
 }
